# python-project-lvl4

./: .coverage  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
app/: admin.py  filter.py  forms.py  mixin.py  models.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_task.py  0003_task_author.py  0004_task_performer.py  0005_task_created_at_task_updated_at.py  0006_remove_task_updated_at.py  0007_alter_status_name_alter_task_author_alter_task_name_and_more.py  0008_label_status_label_task.py  0009_remove_label_status.py  0010_remove_label_created_at_remove_label_task_and_more.py  0011_alter_label_name_alter_task_label_alter_task_status.py  0012_alter_task_created_at_alter_task_description.py  0013_alter_label_name_alter_status_name.py  0014_remove_task_performer_task_executor_alter_task_name_and_more.py  0015_alter_task_executor.py  0016_remove_task_label_task_labels.py
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixin.py  settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create_label.html  labels.html
task_manager/templates/statuses/: create_stat.html  delete_stat.html  statuses.html
task_manager/templates/tasks/: create_task.html  delete_task.html  detail_task.html  tasks.html
task_manager/templates/users/: delete_user.html  edit_user.html  login.html  logout.html  registration.html  users.html
