[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Svennson17 <kiryl.shvedau@gmail.com>"]

packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.1"
dj-database-url = "^0.5.0"
django-filter = "^21.1"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
